--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "postinstall": "./node_modules/.bin/typings install",
+    "typings": "./node_modules/.bin/typings install",
     "tsc": "./node_modules/.bin/tsc",
     "tsc:w": "./node_modules/.bin/tsc -w",
     "serve": "./node_modules/.bin/live-server --host=localhost --port=8080 .",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "concurrently": "^1.0.0",
     "live-server": "^0.9.0",
-    "typescript": "^1.7.3"
+    "typescript": "^2.1.4",
+    "typings": "^2.1.0"
   }
 }
