--- a/package.json
+++ b/package.json
@@ -20,18 +20,20 @@
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
-    "angular-in-memory-web-api": "~0.2.2",
+    "angular-in-memory-web-api": "^0.2.2",
     "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.1",
-    "zone.js": "^0.7.4",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
-    "systemjs": "0.19.6"
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.1",
+    "systemjs": "0.19.30",
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
+    "codelyzer": "^2.0.0-beta.4",
     "concurrently": "^1.0.0",
     "live-server": "^0.9.0",
+    "tslint": "^4.1.1",
     "typescript": "^2.1.4",
     "typings": "^2.1.0"
   }
